--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -23,10 +23,13 @@
 	</div>
 </div>
 
+
+
+
 <section id="champion_container" class="container">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-10 col-md-offset-1">
+				<div class=" col-xs-12 col-md-10 col-md-offset-1">
 					<h3>Champions</h3>	
 				</div>
 			</div>
