--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,91 +8,101 @@
 		<h1 class="text-center">Summoner Name</h1>
 	<% } %>
 	</div>	
-	<div class="container">
+	<div class="container list-group-item">
 		<div class="row">
-			<div class="col-sm-4 text-left">
-				<h3>Your Trending Champs</h3>
-				<div class="row">
-					<div class="col-sm-3 col-sm-offset-1"><img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png"></div>
-					<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
-				</div>
-				<div class="row">
-					<div class="col-sm-3 col-sm-offset-1">
-						<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Veigar.png">
+			
+			<div class="container">
+	    		<div class="col-sm-4 text-left">
+					<h3>Your Trending Champs</h3>
+					<div class="row">
+						<div class="col-sm-3 col-sm-offset-1"><img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Aatrox.png"></div>
+						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
 					</div>
-					<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
-				</div>
-				<div class="row">
-					<div class="col-sm-3 col-sm-offset-1">
-						<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Warwick.png">
+					<div class="row">
+						<div class="col-sm-3 col-sm-offset-1">
+							<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Veigar.png">
+						</div>
+						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
 					</div>
-					<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
-				</div>	
+					<div class="row">
+						<div class="col-sm-3 col-sm-offset-1">
+							<img class="img-responsive img-thumbnail" src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/Warwick.png">
+						</div>
+						<div class="col-sm-8 text-left"><h4>Champion Name</h4></div>
+					</div>	
+				</div>
+
+        		<div class="col-sm-8">
+            		<div class="accordion-wrapper">
+		                <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
+		                    <div class="panel panel-default">
+		                        <div class="panel-heading" role="tab" id="headingOne">
+		                            <h4 class="panel-title">
+		                				<a role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Featured Story
+		                				</a>
+		            				</h4>
+		                        </div>
+		                        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+		                            <div class="panel-body">
+		                                <h4>Slide Title</h4>
+		                            </div>
+		                        </div>
+		                    </div>
+		                    <div class="panel panel-default">
+		                        <div class="panel-heading" role="tab" id="headingTwo">
+		                            <h4 class="panel-title">
+		                				<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">About The Reins Act
+		                				</a>
+		            				</h4>
+		                        </div>
+		                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+		                            <div class="panel-body">
+		                                <h4>Slide Title</h4>
+		                            </div>
+		                        </div>
+		                    </div>
+		                    <div class="panel panel-default">
+		                        <div class="panel-heading" role="tab" id="headingThree">
+		                            <h4 class="panel-title">
+		                				<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Video
+		                				</a>
+		            				</h4>
+		                        </div>
+		                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+		                            <div class="panel-body">
+		                                <h4>Slide Title</h4>
+		                            </div>
+		                        </div>
+		                    </div>
+		                    <div class="panel panel-default">
+		                        <div class="panel-heading" role="tab" id="headingFour">
+		                            <h4 class="panel-title">
+		                				<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree" aria-expanded="false" aria-controls="collapseFour">Photos
+		                				</a>
+		            				</h4>
+		                        </div>
+		                        <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+		                            <div class="panel-body">
+		                                <h4>Slide Title</h4>
+		                            </div>
+		                        </div>
+		                    </div>
+		                </div>
+		            </div>
+		        </div>
 			</div>
-			<div class="col-sm-8 text-center">
-				<h3>Your League</h3>
-				<div id="accordion" class="panel-group" role="tablist" aria-multiselectable="true">
-					<div class="panel panel-default">
-						<div class="panel panel-heading" role="tab">
-							<a class="collapsed" role="button" data-toggle="collapse" data-parent="accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-								<h3 class="panel-title">
-									 Panel Title 1
-								</h3>
-							</a>
-							
-						</div>
-						<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-							    <ul class="list-group">
-							   
-							    <% if(currentUser) { %>
-							    	<li><%= "Fuck You "+ currentUser.local.email %></li>
-								
 
-								<% } else { %>
-							    	<li class="list-group-item">LiSt item</li>
-								    <li class="list-group-item">LiSt item</li>
-							    <% } %>
-								    
-								
-
-								</ul>
-						</div>
-					</div>
-					<div class="panel panel-default">
-						<div class="panel panel-heading" role="tab">
-							<a class="collapsed" role="button" data-toggle="collapse" data-parent="accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-								<h3 class="panel-title">
-									 Panel Title 2
-								</h3>	
-							</a>
-							
-						</div>
-						<div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
-						    <ul class="list-group">
-						    	<li class="list-group-item">
-  									<div class="input-group">
-	  									<input class="form-control" aria-label="???">
-  										<div class="input-group-btn">
-  											<button class="btn btn-default"><span class="glyphicon glyphicon-edit"></span></button>
-											<button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></button>
-  										</div>
-  									</div>
-								</li>
-
-							    <li class="list-group-item">LiSt item</li>
-							    <li class="list-group-item">LiSt item</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-	
+		</div>
+	</div>
 	<hr>
 
 	<div class="container-fluid">
 		<div class="col-sm-12 text-center">
-			<a href="./champions"><button class="col-sm-6 col-sm-offset-3">Search Champions</button></a>
+			<a href="../champions"><button class="col-sm-6 col-sm-offset-3">Search Champions</button></a>
 		</div>
 	</div>
 
     <% include ./partials/footer %>
+
+
+
